# tracemaid

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/fastapi_demo/: __init__.py  main.py  requirements.txt  run_demo.py  test_endpoints.py
examples/fastapi_demo/routes/: __init__.py  order_routes.py  user_routes.py
examples/fastapi_demo/services/: __init__.py  order_service.py  tracing.py  user_service.py
tests/: __init__.py  test_advanced_filter.py  test_cli.py  test_exporter.py  test_fastapi_demo_structure.py  test_features.py  test_integrations.py  test_main.py  test_mermaid.py  test_parser.py  test_plantuml.py  test_project_structure.py  test_routes.py  test_selector.py  test_services.py  test_tree.py
tests/fixtures/: sample_trace.json
tracemaid/: __init__.py  __main__.py  cli.py
tracemaid/core/: __init__.py  advanced_filter.py  features.py  mermaid.py  parser.py  plantuml.py  selector.py
tracemaid/exporters/: __init__.py  mermaid_exporter.py
tracemaid/integrations/: __init__.py  fastapi_integration.py  setup.py
tracemaid/utils/: __init__.py  tree.py
